# llccpv

./: .gitignore  CLAUDE.md  LICENSE  README.md  meson.build
shaders/: fsr_easu.frag  fsr_rcas.frag  nv12.frag  passthrough.frag  quad.vert  sharp_bilinear.frag  uyvy.frag  yuyv.frag
src/: audio.c  audio.h  capture.c  capture.h  capture_mailbox.c  capture_mailbox.h  main.c  picker.cpp  picker.h  render.c  render.h  ring.c  ring.h  shader.c  shader.h  util.h
tests/: README.md  test_audio.c  test_capture_mailbox.c  test_pixel.c
tests/e2e/: README.md  check_prereqs.sh  meson_test.sh  run.sh  setup_device.sh
tests/e2e/feeder/: feeder.c
tests/e2e/runner/: harness.py  main.py
tests/e2e/runner/tests/: test_correctness.py  test_edge_cases.py  test_stress.py
tests/support/: fixtures.c  fixtures.h  gl_harness.c  gl_harness.h  ref_scale.c  ref_scale.h  ref_yuv.c  ref_yuv.h  t.h
